04.myfirst-api-server/05.blue-green/deploy-green.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: skala-myfirst-api-server-new
  namespace: class-0
spec:
  replicas: 1
  selector:
    matchLabels:
      app: skala-myfirst-api-server-new
  template:
    metadata:
      annotations:
        prometheus.io/scrape: 'true'
        prometheus.io/port: '8080'
        prometheus.io/path: '/actuator/prometheus'
        update: 1639bd93
      labels:
        app: skala-myfirst-api-server-new
    spec:
      containers:
      - name: webserver
        image: skala-registry.skala-ai.com/class-0/skala-webserver:2.0
        imagePullPolicy: Always
