04.myfirst-api-server/05.blue-green/ingress-blue.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
  name: skala-myfirst-ingress
  namespace: class-0
spec:
  ingressClassName: public-nginx
  rules:
  - host: skala-ingress.skala25a.project.skala-ai.com
    http:
      paths:
      - backend:
          service:
            name: skala-myfirst-api-server
            port:
              number: 8080
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - 'skala-ingress.skala25a.project.skala-ai.com'
    secretName: skala-ingress-project-tls-cert
